# ready-set-bet-calculator

./: README.md  pyproject.toml
src/readysetbet/: __init__.py  components.py  game_loop.py  main.py  readysetbet_.py  simulation.py  tui.py
