[project]
name = "readysetbet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafaeh", email = "rafael.castreq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
]

[project.scripts]
readysetbet = "readysetbet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]

[tool.ruff]
# Global Ruff settings
line-length = 88 # Matches Black's default
target-version = "py39" # Or your project's Python version
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of pycodestyle (E) by default.
# You can extend this with other rule sets like B (Bugbear), D (Docstrings), etc.
select = ["E", "F", "W", "I"] # Example: E, F, W for warnings, I for isort
ignore = [
    "E501", # line-too-long (handled by formatter)
    "W191", # tab-indentation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
